one assign function added
Signed-off-by: agaye <ag13748@it017324.(none)>

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,3 +7,4 @@ Title: Datashield package advanced structural equation modeling
 Description: This package implement functions from the OpenMx package.
 Depends:
     OpenMx
+AssignMethods: runMx.ds=OpenMx::runMx
