--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,7 +3,7 @@ Maintainer: <datashield@obiba.org>
 Author: <datashield@obiba.org>
 Version: 1.0
 License: GPL-3
-Title: Datashield package advanced structural equation modeling
+Title: Datashield for package advanced structural equation modeling
 Description: This package implement functions from the OpenMx package.
 Depends:
     OpenMx
