--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,7 +6,13 @@ License: GPL-3
 Title: Datashield for package advanced structural equation modeling
 Description: This package implement functions from the OpenMx package.
 Depends:
-    OpenMx,
-    dsbase
+    OpenMx
+AggregateMethods: paste=base::paste,
+    as.logical=base::as.logical,
+    diag=base::diag
 AssignMethods: runMx.ds=OpenMx::runMx,
-    equals.logical
+    equals.logical,
+    summary=base::summary,
+    cor=stats::cor,
+    var=stats::var,
+    colMeans=base::colMeans
