--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,11 +10,11 @@ Depends:
 AggregateMethods: diag=base::diag,
     NROW=base::NROW,
     cor=stats::cor,
-    var=stats::var
+    var=stats::var,
+    colMeans=base::colMeans
 AssignMethods: runMx.ds=OpenMx::runMx,
     equals.logical,
     summary=base::summary,
-    colMeans=base::colMeans,
     paste=base::paste,
     as.logical=base::as.logical,
     rep=base::rep
