OpenMx functions added to assign functions.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,4 +17,12 @@ AssignMethods: runMx.ds=OpenMx::runMx,
     paste=base::paste,
     as.logical=base::as.logical,
     rep=base::rep,
-    diag=base::diag
+    diag=base::diag,
+    mxMatrix=OpenMx::mxMatrix,
+    mxData=OpenMx::mxData,
+    mxFIMLObjective=OpenMx::mxFIMLObjective,
+    mxModel=OpenMx::mxModel,
+    mxAlgebra=OpenMx::mxAlgebra,
+    mxAlgebraObjective=OpenMx::mxAlgebraObjective,
+    mxCI=OpenMx::mxCI,
+    mxRun=OpenMx::mxRun
