--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,10 +10,10 @@ Depends:
 AggregateMethods: NROW=base::NROW,
     cor=stats::cor,
     var=stats::var,
-    colMeans=base::colMeans
+    colMeans=base::colMeans,
+    summary=base::summary
 AssignMethods: runMx.ds=OpenMx::runMx,
     equals.logical,
-    summary=base::summary,
     paste=base::paste,
     as.logical=base::as.logical,
     rep=base::rep,
