--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,6 +14,7 @@ AggregateMethods: NROW=base::NROW,
     summary=base::summary
 AssignMethods: runMx.ds=OpenMx::runMx,
     equals.logical,
+    load.omxSymbolTable,
     paste=base::paste,
     as.logical=base::as.logical,
     rep=base::rep,
