--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,11 +11,9 @@ AggregateMethods: NROW=base::NROW,
     cor=stats::cor,
     var=stats::var,
     colMeans=base::colMeans,
-    summary=base::summary,
-    load.omxSymbolTable
+    summary=base::summary
 AssignMethods: runMx.ds=OpenMx::runMx,
     equals.logical,
-    load.omxSymbolTable,
     paste=base::paste,
     as.logical=base::as.logical,
     rep=base::rep,
@@ -24,7 +22,7 @@ AssignMethods: runMx.ds=OpenMx::runMx,
     mxData=OpenMx::mxData,
     mxFIMLObjective=OpenMx::mxFIMLObjective,
     mxModel=OpenMx::mxModel,
-    mxAlgebra=OpenMx::mxAlgebra,
+    mxAlgebra,
     mxAlgebraObjective=OpenMx::mxAlgebraObjective,
     mxCI=OpenMx::mxCI,
     mxRun=OpenMx::mxRun
