'productDS' added to assign functions.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -25,4 +25,5 @@ AssignMethods: runMx.ds=OpenMx::runMx,
     mxAlgebraDS,
     mxAlgebraObjective=OpenMx::mxAlgebraObjective,
     mxCI=OpenMx::mxCI,
-    mxRun=OpenMx::mxRun
+    mxRun=OpenMx::mxRun,
+    productDS
