move 'mxAlgebraDS' to aggregate just to check its output.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,7 +11,8 @@ AggregateMethods: NROW=base::NROW,
     cor=stats::cor,
     var=stats::var,
     colMeans=base::colMeans,
-    summary=base::summary
+    summary=base::summary,
+    mxAlgebraDS
 AssignMethods: runMx.ds=OpenMx::runMx,
     equals.logical,
     paste=base::paste,
@@ -22,7 +23,6 @@ AssignMethods: runMx.ds=OpenMx::runMx,
     mxData=OpenMx::mxData,
     mxFIMLObjective=OpenMx::mxFIMLObjective,
     mxModel=OpenMx::mxModel,
-    mxAlgebraDS,
     mxAlgebraObjective=OpenMx::mxAlgebraObjective,
     mxCI=OpenMx::mxCI,
     mxRun=OpenMx::mxRun,
