--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,8 +11,7 @@ AggregateMethods: NROW=base::NROW,
     cor=stats::cor,
     var=stats::var,
     colMeans=base::colMeans,
-    summary=base::summary,
-    mxAlgebraDS
+    summary=base::summary
 AssignMethods: runMx.ds=OpenMx::runMx,
     equals.logical,
     paste=base::paste,
@@ -29,4 +28,5 @@ AssignMethods: runMx.ds=OpenMx::runMx,
     productDS,
     subset=base::subset,
     mxAlgebra=OpenMx::mxAlgebra,
-    data=base::data
+    data=base::data,
+    mxAlgebraDS
