--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,7 +11,8 @@ AggregateMethods: NROW=base::NROW,
     cor=stats::cor,
     var=stats::var,
     colMeans=base::colMeans,
-    summary=base::summary
+    summary=base::summary,
+    loadomxSymbolTableDS
 AssignMethods: runMx.ds=OpenMx::runMx,
     equals.logical,
     paste=base::paste,
@@ -27,5 +28,5 @@ AssignMethods: runMx.ds=OpenMx::runMx,
     mxRun=OpenMx::mxRun,
     productDS,
     subset=base::subset,
-    mxAlgebra=OpenMx::mxAlgebra,
-    loadomxSymbolTableDS
+    mxAlgebra=OpenMx::mxAlgebra
+
