--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,8 +11,7 @@ AggregateMethods: NROW=base::NROW,
     cor=stats::cor,
     var=stats::var,
     colMeans=base::colMeans,
-    summary=base::summary,
-    loadomxSymbolTableDS
+    summary=base::summary
 AssignMethods: runMx.ds=OpenMx::runMx,
     equals.logical,
     paste=base::paste,
@@ -28,4 +27,5 @@ AssignMethods: runMx.ds=OpenMx::runMx,
     mxRun=OpenMx::mxRun,
     productDS,
     subset=base::subset,
-    mxAlgebra=OpenMx::mxAlgebra
+    mxAlgebra=OpenMx::mxAlgebra,
+    loadomxSymbolTableDS
