Back to basics.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -27,5 +27,4 @@ AssignMethods: runMx.ds=OpenMx::runMx,
     mxRun=OpenMx::mxRun,
     productDS,
     subset=base::subset,
-    mxAlgebra=OpenMx::mxAlgebra,
-    loadomxSymbolTableDS
+    mxAlgebra=OpenMx::mxAlgebra
