--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -27,4 +27,5 @@ AssignMethods: runMx.ds=OpenMx::runMx,
     mxRun=OpenMx::mxRun,
     productDS,
     subset=base::subset,
-    mxAlgebra=OpenMx::mxAlgebra
+    mxAlgebra=OpenMx::mxAlgebra,
+    mxAlgebraDS
