Make all functions 'assign' for debugging.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,8 +9,8 @@ AggregateMethods: NROW=base::NROW,
     cor=stats::cor,
     var=stats::var,
     colMeans=base::colMeans,
-    summary=base::summary
-AssignMethods: runMx.ds=OpenMx::runMx,
+    summary=base::summary,
+    mxRun.ds=OpenMx::mxRun,
     equals.logical,
     paste=base::paste,
     as.logical=base::as.logical,
@@ -22,7 +22,22 @@ AssignMethods: runMx.ds=OpenMx::runMx,
     mxModel=OpenMx::mxModel,
     mxAlgebraObjective=OpenMx::mxAlgebraObjective,
     mxCI=OpenMx::mxCI,
-    mxRun=OpenMx::mxRun,
+    productDS,
+    subset=base::subset,
+    mxAlgebra=OpenMx::mxAlgebra,
+    mxAlgebraDS  
+AssignMethods: mxRun.ds=OpenMx::mxRun,
+    equals.logical,
+    paste=base::paste,
+    as.logical=base::as.logical,
+    rep=base::rep,
+    diag=base::diag,
+    mxMatrix=OpenMx::mxMatrix,
+    mxData=OpenMx::mxData,
+    mxFIMLObjective=OpenMx::mxFIMLObjective,
+    mxModel=OpenMx::mxModel,
+    mxAlgebraObjective=OpenMx::mxAlgebraObjective,
+    mxCI=OpenMx::mxCI,
     productDS,
     subset=base::subset,
     mxAlgebra=OpenMx::mxAlgebra,
