R base subset added to 'assign' functions.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -27,5 +27,6 @@ AssignMethods: mxRun=OpenMx::mxRun,
     subset=base::subset,
     mxAlgebra=OpenMx::mxAlgebra,
     mxAlgebraDS,
+    subset=base::subset,
     list=base::list,
     quote=base::quote
