--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,8 +14,7 @@ AggregateMethods: NROW=base::NROW,
 AssignMethods: mxRun=OpenMx::mxRun,
     equals.logical,
     paste0=base::paste0,
-    as.logical=base::as.logical,
-    rep=base::rep,
+     rep=base::rep,
     diag=base::diag,
     mxMatrix=OpenMx::mxMatrix,
     mxData=OpenMx::mxData,
@@ -27,6 +26,6 @@ AssignMethods: mxRun=OpenMx::mxRun,
     subset=base::subset,
     mxAlgebra=OpenMx::mxAlgebra,
     mxAlgebraDS,
-    sort=base::sort
     list=base::list,
-    quote=base::quote
+    quote=base::quote,
+    expression=base::expression
