'mxRename' of OpenMx added to 'assign' list.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,7 +14,7 @@ AggregateMethods: NROW=base::NROW,
 AssignMethods: mxRun=OpenMx::mxRun,
     equals.logical,
     paste0=base::paste0,
-     rep=base::rep,
+    rep=base::rep,
     diag=base::diag,
     mxMatrix=OpenMx::mxMatrix,
     mxData=OpenMx::mxData,
@@ -26,6 +26,7 @@ AssignMethods: mxRun=OpenMx::mxRun,
     subset=base::subset,
     mxAlgebra=OpenMx::mxAlgebra,
     mxAlgebraDS,
+    mxRename=OpenMx::mxRename,
     list=base::list,
     quote=base::quote,
     expression=base::expression
