Some functions removed.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,7 +12,6 @@ AggregateMethods: NROW=base::NROW,
     summary=base::summary,
     list=base::list
 AssignMethods: mxRun=OpenMx::mxRun,
-    equals.logical,
     paste0=base::paste0,
     rep=base::rep,
     diag=base::diag,
@@ -23,10 +22,7 @@ AssignMethods: mxRun=OpenMx::mxRun,
     mxAlgebraObjective=OpenMx::mxAlgebraObjective,
     mxCI=OpenMx::mxCI,
     productDS,
-    subset=base::subset,
     mxAlgebra=OpenMx::mxAlgebra,
     mxAlgebraDS,
     mxRename=OpenMx::mxRename,
-    list=base::list,
-    quote=base::quote,
-    expression=base::expression
+    list=base::list
