Function 'mxDataDS' added.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -18,7 +18,7 @@ AssignMethods: mxRun=OpenMx::mxRun,
     rep=base::rep,
     diag=base::diag,
     mxMatrix=OpenMx::mxMatrix,
-    mxData=OpenMx::mxData,
+    mxDataDS,
     mxFIMLObjective=OpenMx::mxFIMLObjective,
     mxModel=OpenMx::mxModel,
     mxAlgebraObjective=OpenMx::mxAlgebraObjective,
