--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,6 +17,7 @@ AssignMethods: mxRun=OpenMx::mxRun,
     mxData=OpenMx::mxData,
     mxFIMLObjective=OpenMx::mxFIMLObjective,
     mxModel=OpenMx::mxModel,
+    mxModelDS,
     mxAlgebraObjective=OpenMx::mxAlgebraObjective,
     mxCI=OpenMx::mxCI,
     mxAlgebra=OpenMx::mxAlgebra,
