Code amended to remove call to library 'OpenMx' which is already stated in dependencies.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,6 +15,7 @@ AssignMethods: mxRun=OpenMx::mxRun,
     diag=base::diag,
     mxMatrix=OpenMx::mxMatrix,
     mxData=OpenMx::mxData,
+    mxDataDS,
     mxFIMLObjective=OpenMx::mxFIMLObjective,
     mxModel=OpenMx::mxModel,
     mxModelDS,
