Two functions added for debugging.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,6 +10,8 @@ Depends:
 AggregateMethods: list=base::list,
     summary=base::summary
 AssignMethods: mxRunDS,
+    mxRun=OpenMx::mxRun,
+    mxModel=OpenMx::mxModel,
     paste0=base::paste0,
     rep=base::rep,
     diag=base::diag,
