--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,11 +7,8 @@ Title: Datashield for package advanced structural equation modeling
 Description: This package implement functions from the OpenMx package
 Depends:
     OpenMx
-AggregateMethods: list=base::list,
-    summary=base::summary
+AggregateMethods: mxSummaryDS
 AssignMethods: mxRunDS,
-    mxRun=OpenMx::mxRun,
-    mxModel=OpenMx::mxModel,
     paste0=base::paste0,
     rep=base::rep,
     diag=base::diag,
@@ -24,4 +21,5 @@ AssignMethods: mxRunDS,
     mxAlgebra=OpenMx::mxAlgebra,
     mxAlgebraDS,
     list=base::list,
-    c=base::c
+    c=base::c,
+    summary=base::summary
