--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: dsMx
 Maintainer: <datashield@obiba.org>
 Author: <datashield@obiba.org>
-Version: 1.0
+Version: 1.0.0
 License: GPL-3
 Title: Datashield for package advanced structural equation modeling
 Description: This package implement functions from the OpenMx package
@@ -21,5 +21,4 @@ AssignMethods: mxRunDS,
     mxAlgebra=OpenMx::mxAlgebra,
     mxAlgebraDS,
     list=base::list,
-    c=base::c,
-    summary=base::summary
+    c=base::c
