--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,7 +7,8 @@ Title: Datashield package for advanced structural equation modelling
 Description: This package implement functions from the OpenMx library.
 Depends:
     OpenMx
-AggregateMethods: mxSummaryDS
+AggregateMethods: mxSummaryDS,
+    mxEValDS
 AssignMethods: mxRunDS,
     paste0=base::paste0,
     rep=base::rep,
