--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,7 +8,7 @@ Description: This package implement functions from the OpenMx library.
 Depends:
     OpenMx
 AggregateMethods: mxSummaryDS,
-    mxEValDS
+    mxEvalDS
 AssignMethods: mxRunDS,
     paste0=base::paste0,
     rep=base::rep,
