--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,7 +8,8 @@ Description: This package implement functions from the OpenMx library.
 Depends:
     OpenMx
 AggregateMethods: mxSummaryDS,
-    mxEvalDS
+    mxEvalDS,
+    list=base::list
 AssignMethods: mxRunDS,
     paste0=base::paste0,
     rep=base::rep,
