--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,6 +11,7 @@ AggregateMethods: mxSummaryDS,
     mxEvalDS,
     list=base::list,
     omxGetParameters=OpenMx::omxGetParameters
+    mxCompare=OpenMx::mxCompare
 AssignMethods: mxRunDS,
     paste0=base::paste0,
     rep=base::rep,
